# Automated-Algorithm-Selection

./: README.md
Code-Automated-Algorithm-Selection/: CONV.py  EncoderDecoder.py  GMM.py  MLP.py  RandomForest.py  VotingClassifier_Conv1_10_ckpt.pth  VotingClassifier_Conv1_20_ckpt.pth  VotingClassifier_Conv1_4_ckpt.pth  VotingClassifier_MLP1_10_ckpt.pth  XGBoosting.py  create_portofolio.py  dataset.py  labels_train.txt  loader.py  main.py  random.txt  random_r.txt  results.txt  runner.py  solution-test.txt  solve_with_GA.py  solve_with_cp.py  solve_with_gurobi.py  solve_with_hyperpack.py  solve_with_lp.py  solve_with_priority_guillotine.py  solve_with_pso.py  solve_with_sat.py  solve_with_smt.py  solve_with_steinberg.py  test.py  testing.py  train.py  transforms_var2.py  utils.py
Code-Automated-Algorithm-Selection/dataset1/: 0.in  1.in  10.in  100.in  101.in  102.in  103.in  104.in  105.in  106.in  107.in  108.in  109.in  11.in  110.in  111.in  112.in  113.in  114.in  115.in  116.in  117.in  118.in  119.in  12.in  120.in  121.in  122.in  123.in  124.in  125.in  126.in  127.in  128.in  129.in  13.in  130.in  131.in  132.in  133.in  (+1161 more)
Code-Automated-Algorithm-Selection/dataset2/: 1000.in  1001.in  1002.in  1003.in  1004.in  1005.in  1006.in  1007.in  1008.in  1009.in  1010.in  1011.in  1012.in  1013.in  1014.in  1015.in  1016.in  1017.in  1018.in  1019.in  1020.in  1021.in  1022.in  (+977 more)
Code-Automated-Algorithm-Selection/floorplanning/src/: CMakeLists.txt  GuillotineFloorplan.cpp  MILPFloorplan.cpp  ShelfFloorplan.cpp  SkylineFloorplan.cpp  SkylineFloorplan.h  gurobi_c++.h
(+368 files in other folders)
